# CB-UFO-AGI-2024

./: README.md  contributing.md  pyproject.toml
data/raw/train_Ametist/: readme.md
notebooks/: EDA.ipynb
