[project]
name = "CB-UFO-AGI-2024"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Denis G", email = "denisgrigoriev04@yandex.ru"},
]
dependencies = [
    "pandas>=2.2.2",
    "openpyxl>=3.1.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "CC-BY-NC-SA-4.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.4",
]
